test_planet_mesh init

--- a/NB_Graphics/NB_Test_Application/NB_Test_Application.vcxproj
+++ b/NB_Graphics/NB_Test_Application/NB_Test_Application.vcxproj
@@ -134,12 +134,14 @@
     <None Include="res\shader\test_shader_simple.vert" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="NB_Test_Planet_Mesh.h" />
     <ClInclude Include="NB_Test_Simple_Shader.h" />
     <ClInclude Include="NB_Test_Model_Load.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="NB_Test_Model_Load.cpp" />
+    <ClCompile Include="NB_Test_Planet_Mesh.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\awesomeface.png" />
