added Test Classes and test for cb_error

--- a/NB_Graphics/NB_Graphics/NB_Graphics.vcxproj
+++ b/NB_Graphics/NB_Graphics/NB_Graphics.vcxproj
@@ -133,6 +133,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="NB_Console_Handler.cpp" />
     <ClCompile Include="NB_Model.cpp" />
     <ClCompile Include="NB_Standard_Shader.cpp" />
     <ClCompile Include="NB_Camera.cpp" />
@@ -147,6 +148,7 @@
     <ClCompile Include="NB_Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="NB_Console_Handler.h" />
     <ClInclude Include="NB_Model.h" />
     <ClInclude Include="NB_Standard_Shader.h" />
     <ClInclude Include="NB_Camera.h" />
